// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can convert a blockquote 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.BlockQuote",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "
      ",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "A quote.",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "
    ",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert a code block 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.CodeBlock",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "  this is a multiline
  code
  block.
",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert a custom code block 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.CodeBlock",
      "info": "<video src=\\"https://www.youtube.com/embed/dQw4w9WgXcQ\\"/>",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "  this is a multiline
  code

  containing a newline

  which should be handled by the video plugin.
",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert a link 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "http://clause.io",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "
      ",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "a link",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "
    ",
            },
          ],
          "title": "",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert a multiline html block 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a custom",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.HtmlBlock",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "  <custom src=\\"property\\">
  contents
  </custom>",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "block.",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert a single line html block 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.HtmlInline",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "<custom src=\\"property\\"/>",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert a thematic break 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.ThematicBreak",
      "nodes": Array [],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "A footer.",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert a video block 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "1",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading One",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.HtmlBlock",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "  <video src=\\"https://www.youtube.com/embed/dQw4w9WgXcQ\\"/>",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert an ordered list 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an ordered list:",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "delimiter": "period",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "
      ",
            },
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "
        ",
                },
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "
      ",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "
      ",
            },
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "
        ",
                },
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "
      ",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "
      ",
            },
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "
        ",
                },
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "
      ",
                },
              ],
            },
          ],
        },
      ],
      "start": "1",
      "tight": "true",
      "type": "ordered",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Done.",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert an unordered list 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an unordered list:",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "
      ",
            },
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "
        ",
                },
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "
      ",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "
      ",
            },
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "
        ",
                },
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "
      ",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "
      ",
            },
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "
        ",
                },
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "
      ",
                },
              ],
            },
          ],
        },
      ],
      "tight": "true",
      "type": "bullet",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Done.",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert basic text 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is some text.",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert bold italic text 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "
      ",
            },
            Object {
              "$class": "org.accordproject.commonmark.Strong",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "
        ",
                },
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "some",
                },
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "
      ",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert bold text 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Strong",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "
      ",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "some",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "
    ",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert h1 to slate 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "1",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading One",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert h2 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "2",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Two",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert h3 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "3",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Three",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert h4 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "4",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Four",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert h5 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "5",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Five",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert h6 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "6",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Six",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert inline code 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Code",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "inline code",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert italic text 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "
      ",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "some",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "
    ",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert paragraphs 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Text",
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is first paragraph.",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is second paragraph.",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "
  ",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;
